--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g history-limit 100000
 # modern colors
 set -g default-terminal "tmux-256color"
 # set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-# set -ga terminal-overrides ",xterm-256color:Tc"
-set -ga terminal-overrides ",alacritty:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
+# set -ga terminal-overrides ",alacritty:Tc"
 
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
@@ -43,34 +43,15 @@ bind -n S-Up command-prompt "rename-window %%"
 ######################
 ### DESIGN CHANGES ###
 ######################
-
 # Avoid date/time taking up space
 set -g status-right ''
 set -g status-right-length 0
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour40 #colour166 #orange
-set-window-option -g window-status-current-bg default
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour40 #colour166 #orange
-
-# pane number display
+set -g status-style bg=colour235,fg=colour136,default
+set -g window-style fg=colour244,bg=default
+set -g window-status-current-style fg=colour40,bg=default
+set -g pane-border-style fg=colour235
+set -g pane-active-border-style fg=colour240
+set -g message-style bg=colour235,fg=colour40
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour40 #colour166 #orange
 
