--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # set scroll history to 100,000 lines
-set-option -g history-limit 100000
+set -g history-limit 100000
 
 # modern colors
 set -g default-terminal "tmux-256color"
@@ -24,10 +24,6 @@ bind-key -nr C-y run "tmux show-buffer | xsel -ib"
 # Avoid ESC delay
 set -s escape-time 0
 
-# Fix titlebar
-set -g set-titles on
-set -g set-titles-string "#T"
-
 # VIM mode
 set -g mode-keys vi
 
@@ -43,17 +39,33 @@ bind -n S-Up command-prompt "rename-window %%"
 ######################
 ### DESIGN CHANGES ###
 ######################
+# Start window and pane numbering at 1, (0 is too hard to reach).
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+set -g set-titles on
+set -g set-titles-string "#T : #h > #S > #W"
+# set -w -g automatic-rename off
+# Status bar.
+set -g status-bg '#343d46'
+set -g status-fg white
+set -g status-left-length 40
+set -g status-left '#[fg=colour1]#S ⧉ '
+set -g status-right "#[fg=colour1]$USER@#h"
+set -g status-interval 60 # Default is 15.
 # Avoid date/time taking up space
-set -g status-right ''
-set -g status-right-length 0
-set -g status-style bg=colour235,fg=colour136,default
+# set -g status-right ''
+# set -g status-right-length 0
+# set -g status-style bg=colour235,fg=colour136,default
+set -g status-bg '#343d46'
+set -g status-fg white
 set -g window-style fg=colour244,bg=default
 set -g window-status-current-style fg=colour40,bg=default
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style fg=colour240
 set -g message-style bg=colour235,fg=colour40
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour40 #colour166 #orange
+set -g display-panes-active-colour colour33 #blue
+set -g display-panes-colour colour40 #colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
