--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,7 +50,7 @@ set -g set-titles-string "#T : #h > #S > #W"
 set -g status-bg '#343d46'
 set -g status-fg white
 set -g status-left-length 40
-set -g status-left '#[fg=colour1]#S ⧉ '
+set -g status-left '#[fg=colour1]#S '
 set -g status-right "#[fg=colour1]$USER@#h"
 set -g status-interval 60 # Default is 15.
 # Avoid date/time taking up space
