Added alacritty term info to workstation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ set -g history-limit 100000
 # modern colors
 set -g default-terminal "tmux-256color"
 # set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-set -ga terminal-overrides ",xterm-256color:Tc"
-# set -ga terminal-overrides ",alacritty:Tc"
+# set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",alacritty:Tc"
 
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
