--- a/i3/config
+++ b/i3/config
@@ -195,6 +195,7 @@ assign [class="Google-chrome"] $ws4
 assign [class="Steam"] $ws5
 assign [class="vlc"] $ws6
 assign [class="idea"] $ws7
+assign [class="emacs"] $ws7
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
@@ -308,6 +309,7 @@ exec --no-startup-id start_conky_maia
 exec --no-startup-id xautolock -time 30 -locker "betterlockscreen -l"
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+exec --no-startup-id emacs --daemon=instance1
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
