Updates to configuration for new themes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,13 @@
-# set scroll history to 100,000 lines
+# theme
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-powerline true
+set -g @dracula-military-time true
+set -g @dracula-show-battery false
+set -g @dracula-plugins "cpu-usage gpu-usage ram-usage time"
+set -g @dracula-refresh-rate 5
+
 set -g history-limit 100000
-
 set -g default-command "/bin/zsh"
-
-# modern colors
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -119,46 +123,69 @@ set -g status-right-length 100
 # inactive_tab_foreground="#b8b8b8"
 
 # Github Dark
-color0="#0d1117"
-color1="#f85149"
-color2="#3fb950"
-color3="#58a6ff"
-color4="#1f6feb"
-color5="#8957e5"
-color6="#316dca"
-color7="#6e7681"
-background="#0d1117"
-foreground="#E4E6EB"
-inactive_tab_background="#d1d5da"
-inactive_tab_foreground="#1f2428"
+# color0="#0d1117"
+# color1="#f85149"
+# color2="#3fb950"
+# color3="#58a6ff"
+# color4="#1f6feb"
+# color5="#8957e5"
+# color6="#316dca"
+# color7="#6e7681"
+# background="#0d1117"
+# foreground="#E4E6EB"
+# inactive_tab_background="#d1d5da"
+# inactive_tab_foreground="#1f2428"
 
-# Messaging
-set -g message-command-style fg=$color7,bg=$color0
-set -g message-style fg=$color7,bg=$color0
-# Pane
-set -g pane-active-border-style fg=$foreground,bg=$background
-set -g pane-border-style fg=$color2,bg=$color0
-# Status
-set -g status 'on'
-set -g status-fg $color7
-set -g status-bg $color0
+# Kanagawa
+#background="#1F1F28"
+#foreground="#DCD7BA"
+#selection_background="#2D4F67"
+#selection_foreground="#C8C093"
+#url_color="#72A7BC"
+#cursor="#C8C093"
+## Tabs
+#active_tab_background="#2D4F67"
+#active_tab_foreground="#DCD7BA"
+#inactive_tab_background="#223249"
+#inactive_tab_foreground="#727169"
+##tab_bar_background="#15161E"
+## normal
+#color0="#090618"
+#color1="#C34043"
+#color2="#76946A"
+#color3="#C0A36E"
+#color4="#7E9CD8"
+#color5="#957FB8"
+#color6="#6A9589"
+#color7="#C8C093"
 
-# Windows
-setw -g window-status-style fg=$color0,bg=$color0
-setw -g window-status-activity-style fg=$color0,bg=$color0
-setw -g window-status-separator " "
-setw -g window-status-format "#[fg=$background,bg=$color0] #W "
-setw -g window-status-current-format "#[fg=$background,bg=$color2] #W "
+# # Messaging
+# set -g message-command-style fg=$color7,bg=$color0
+# set -g message-style fg=$color7,bg=$color0
+# # Pane
+# set -g pane-active-border-style fg=$foreground,bg=$background
+# set -g pane-border-style fg=$color2,bg=$color0
+# # Status
+# set -g status 'on'
+# set -g status-fg $color7
+# set -g status-bg $color0
 
-set -g "@prefix_highlight_fg" "$color0"
-set -g "@prefix_highlight_bg" "$color2"
-set -g "@prefix_highlight_copy_mode_attr" "fg=$color0,bg=$color2"
+# # Windows
+# setw -g window-status-style fg=$color0,bg=$color0
+# setw -g window-status-activity-style fg=$color0,bg=$color0
+# setw -g window-status-separator " "
+# setw -g window-status-format "#[fg=$background,bg=$color0] #W "
+# setw -g window-status-current-format "#[fg=$background,bg=$color2] #W "
 
-set -g "status-right" "#[fg=$color7,bg=$color0,nounderscore,noitalics]${time_format} #[fg=$foreground,bg=$color0]#[fg=$foreground,bg=$foreground]#[fg=$color7, bg=$foreground]${status_widgets} #[fg=$color2,bg=$foreground,nobold,nounderscore,noitalics]#[fg=$color0,bg=$color2,bold] #h #[fg=$color3, bg=$color2]#[fg=$color1,bg=$color3]"
-set -g "status-left" "#[fg=$color0,bg=$color2,bold] #S #{prefix_highlight}#[fg=$color2,bg=$color0,nobold,nounderscore,noitalics]"
+# set -g "@prefix_highlight_fg" "$color0"
+# set -g "@prefix_highlight_bg" "$color2"
+# set -g "@prefix_highlight_copy_mode_attr" "fg=$color0,bg=$color2"
 
-set -g "window-status-format" "#[fg=$color0,bg=$color0,nobold,nounderscore,noitalics]#[fg=$color7,bg=$color0] #I:#W #[fg=$color0,bg=$color0,nobold,nounderscore,noitalics]"
-set -g "window-status-current-format" "#[fg=$color0,bg=$foreground,nobold,nounderscore,noitalics]#[fg=$background,bg=$foreground,nobold] #I:#W #[fg=$foreground,bg=$color0,nobold,nounderscore,noitalics]"
+# set -g "status-right" "#[fg=$color7,bg=$color0,nounderscore,noitalics]${time_format} #[fg=$foreground,bg=$color0]#[fg=$foreground,bg=$foreground]#[fg=$color7, bg=$foreground]${status_widgets} #[fg=$color2,bg=$foreground,nobold,nounderscore,noitalics]#[fg=$color0,bg=$color2,bold] #h #[fg=$color3, bg=$color2]#[fg=$color1,bg=$color3]"
+# set -g "status-left" "#[fg=$color0,bg=$color2,bold] #S #{prefix_highlight}#[fg=$color2,bg=$color0,nobold,nounderscore,noitalics]"
+
+# set -g "window-status-format" "#[fg=$color0,bg=$color0,nobold,nounderscore,noitalics]#[fg=$color7,bg=$color0] #I:#W #[fg=$color0,bg=$color0,nobold,nounderscore,noitalics]"
+# set -g "window-status-current-format" "#[fg=$color0,bg=$foreground,nobold,nounderscore,noitalics]#[fg=$background,bg=$foreground,nobold] #I:#W #[fg=$foreground,bg=$color0,nobold,nounderscore,noitalics]"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
