--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ window:
   decorations: full
 
   # When true, alacritty starts maximized.
-  startup_mode: Windowed
+  startup_mode: Maximized
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -132,71 +132,59 @@ font:
   # Keep the log file after quitting Alacritty.
   # persistent_logging: false
 
-# Colors (One Dark)
+# Colors (Dracula PRO - Van Helsing)
 colors:
+  # Default colors
   primary:
-    background: "0x282c34"
-    foreground: "0xabb2bf"
+    background: '0x0b0d0f'
+    foreground: '0xf8f8f2'
 
+    # Bright and dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #dim_foreground: '0x9a9a9a'
+    #bright_foreground: '0xffffff'
+
+  # Cursor colors
+  #
+  # Colors which should be used to draw the terminal cursor. If these are unset,
+  # the cursor color will be the inverse of the cell color.
+  cursor:
+    text: '0x414d58'
+    cursor: '0xf8f8f2'
+
+  # Selection colors
+  #
+  # Colors which should be used to draw the selection area. If selection
+  # background is unset, selection color will be the inverse of the cell colors.
+  # If only text is unset the cell text color will remain the same.
+  selection:
+    text: '0xf8f8f2'
+    background: '0x414d58'
+
+  # Normal colors
   normal:
-    black: "0x282c34"
-    red: "0xe06c75"
-    green: "0x98c379"
-    yellow: "0xd19a66"
-    blue: "0x61afef"
-    magenta: "0xc678dd"
-    cyan: "0x56b6c2"
-    white: "0xabb2bf"
+    black:   '0x0b0d0f'
+    red:     '0xff9580'
+    green:   '0x8aff80'
+    yellow:  '0xffff80'
+    blue:    '0x9580ff'
+    magenta: '0xff80bf'
+    cyan:    '0x80ffea'
+    white:   '0xf8f8f2'
 
+  # Bright colors
   bright:
-    black: "0x5c6370"
-    red: "0xe06c75"
-    green: "0x98c379"
-    yellow: "0xd19a66"
-    blue: "0x61afef"
-    magenta: "0xc678dd"
-    cyan: "0x56b6c2"
-    white: "0xffffff"
-
-  # # Colors (Dracula)
-  # colors:
-  #   primary:
-  #     background: "0x282a36"
-  #     foreground: "0xf8f8f2"
-
-  #   cursor:
-  #     text: "0x44475a"
-  #     cursor: "0xf8f8f2"
-
-  #   normal:
-  #     black: "0x000000"
-  #     red: "0xff5555"
-  #     green: "0x50fa7b"
-  #     yellow: "0xf1fa8c"
-  #     blue: "0xbd93f9"
-  #     magenta: "0xff79c6"
-  #     cyan: "0x8be9fd"
-  #     white: "0xbfbfbf"
-
-  #   bright:
-  #     black: "0x4d4d4d"
-  #     red: "0xff6e67"
-  #     green: "0x5af78e"
-  #     yellow: "0xf4f99d"
-  #     blue: "0xcaa9fa"
-  #     magenta: "0xff92d0"
-  #     cyan: "0x9aedfe"
-  #     white: "0xe6e6e6"
-
-  #   dim:
-  #     black: "0x14151b"
-  #     red: "0xff2222"
-  #     green: "0x1ef956"
-  #     yellow: "0xebf85b"
-  #     blue: "0x4d5b86"
-  #     magenta: "0xff46b0"
-  #     cyan: "0x59dffc"
-  #     white: "0xe6e6d1"
+    black:   '0x0b0d0f'
+    red:     '0xffaa99'
+    green:   '0xa2ff99'
+    yellow:  '0xffff99'
+    blue:    '0xaa99ff'
+    magenta: '0xff99cc'
+    cyan:    '0x99ffee'
+    white:   '0xffffff'
 
   draw_bold_text_with_bright_colors: true
 
@@ -271,24 +259,6 @@ mouse:
 
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
-
-  url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    #launcher: open
-
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    modifiers: None
 
 selection:
   semantic_escape_chars: ',│`|:"'' ()[]{}<>'
