--- a/code/settings.json
+++ b/code/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "GitHub Dark Default",
+  "workbench.colorTheme": "Dracula Pro (Van Helsing)",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.colorCustomizations": {
     "[GitHub Dark]": {
