--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-military-time true
 set -g @dracula-show-battery false
-set -g @dracula-plugins "cpu-usage gpu-usage ram-usage time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g @dracula-refresh-rate 5
 
 set -g history-limit 100000
