Configuration adjustment for VSCode and Neovim
- Added Luasnip and Friendly Snippets to Neovim
- Added inlay hints for inferred types to VSCode
- Added which-key command for Docstring creation
- Added Gopls/pylsp/golangci-lint configuration

--- a/code/settings.json
+++ b/code/settings.json
@@ -263,6 +263,8 @@
   "jupyter.askForKernelRestart": false,
   "jupyter.sendSelectionToInteractiveWindow": false,
   "python.linting.pylintArgs": ["--errors-only"],
+  "python.analysis.inlayHints.functionReturnTypes": true,
+  "python.analysis.inlayHints.variableTypes": true,
   "python.autoComplete.addBrackets": true,
   "python.linting.flake8Enabled": false,
   "python.linting.pylintUseMinimalCheckers": false,
