Minor updates to Config for Nvim/VSCode
- Added additionall configuration for appearance in Neovim.
- Added Type hinting and cursor color to VSCode.
- Renamed colors.lua -> appearance.lua.

--- a/code/settings.json
+++ b/code/settings.json
@@ -174,6 +174,7 @@
   "editor.tabCompletion": "on",
   "editor.tokenColorCustomizations": {},
   "editor.codeLensFontFamily": "Inter",
+  "editorCursor.foreground": "#db2466",
   "emmet.showSuggestionsAsSnippets": true,
   "emmet.triggerExpansionOnTab": true,
   "eslint.enable": false,
