--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,7 @@ bind / split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+bind % split-window -h -c "#{pane_current_path}"
 
 # copy to X clipboard
 bind -T copy-mode-vi v send -X begin-selection
