--- a/code/settings.json
+++ b/code/settings.json
@@ -2158,4 +2158,5 @@
   "window.titleBarStyle": "custom",
   "Lua.telemetry.enable": true,
   "editor.stickyScroll.enabled": true,
+  "githubPullRequests.pullBranch": "never",
 }
