--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,5 +1,4 @@
 # env:
-#   TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -30,7 +29,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - buttonless: Title bar, transparent background and title bar buttons
   #     - transparent: Title bar, transparent background, but no title bar buttons
-  decorations: buttonless
+  decorations: full
 
   # When true, alacritty starts maximized.
   startup_mode: windowed
@@ -68,7 +67,6 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    # family: "SauceCodePro Nerd Font"
     family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
@@ -80,7 +78,6 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    # family: "SauceCodePro Nerd Font"
     family: "JetBrains Mono NL"
 
     # The `style` can be specified to pick a specific face.
