Minor update to Starship prompt and Plugin updates

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -31,3 +31,7 @@ disabled = false
 
 [line_break]
 disabled = false
+
+[nodejs]
+detect_files = ["package.json", ".node-version"]
+detect_folders = ["node_modules"]
