--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -56,7 +56,7 @@ font:
     #   - (Linux) monospace
     #   - (Windows) Consolas
     # family: "SauceCodePro Nerd Font"
-    family: "JetBrains Mono NL"
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -67,7 +67,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono NL"
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -78,7 +78,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrains Mono NL"
+    family: "JetBrains Mono"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
